# bdc-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
bdc_monitor/: cli.py  config.py
bdc_monitor/domain/: __init__.py  models.py
bdc_monitor/evaluation/: ablation.py  evaluator.py
bdc_monitor/generation/: generator.py  llm_client.py  rag_pipeline.py
bdc_monitor/indexing/: bm25_index.py  chunker.py  embedder.py  metadata_store.py  pipeline.py  vector_store.py
bdc_monitor/ingestion/: edgar_client.py  parsers.py  pipeline.py  section_classifier.py
bdc_monitor/retrieval/: context_assembler.py  query_router.py  reranker.py  retrievers.py
configs/: dense_only.yaml  hybrid.yaml  hybrid_reranked.yaml  sparse_only.yaml
eval/: questions.yaml
eval/results/: ablation_20260407_223024.json  ablation_v1.json  ablation_v1_notes.md  ablation_v2.json  ablation_v2_notes.md  ablation_v3.json  ablation_v3_notes.md
tests/: test_generation.py  test_retrieval.py
