[project]
name = "bdc-monitor"
version = "0.1.0"
description = "SEC EDGAR filing retrieval and analysis for BDCs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rank-bm25>=0.2",
    "openai>=1.0",
    "anthropic>=0.40",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "cohere>=5.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tiktoken>=0.7",
]

[project.scripts]
bdc = "bdc_monitor.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
